--- a/LAB06/1988216_Cart.html
+++ b/LAB06/1988216_Cart.html
@@ -133,24 +133,19 @@
         input[type=number] {
             -moz-appearance: textfield;
         }
-
-        /* Remove Arrow */
     </style>
 </head>
 
 <body>
     <div class="container-fluid">
+        <!-- Navigation -->
         <nav class="navbar navbar-expand-lg navbar-dark primary-color">
-
             <a class="navbar-brand" href="#">Cửa hàng</a>
-
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#basicExampleNav"
                 aria-controls="basicExampleNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
             <div class="collapse navbar-collapse" id="basicExampleNav">
-
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Trang chủ
@@ -173,45 +168,39 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Liên hệ</a>
                     </li>
-
-
-
                 </ul>
-
                 <form class="form-inline">
                     <div class="md-form my-0">
                         <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
                     </div>
                 </form>
             </div>
-
         </nav>
+        <!-- ./Navigation -->
     </div>
 
 
-
+    <!-- Cart -->
     <div class="container py-5" id="cart">
+        <!-- Cart Header -->
         <div class="row">
             <div class="col-lg-12 heading-cart">
                 <div>
                     <h2>Giỏ hàng của bạn</h2>
                     <div class="small">Vui lòng kiểm tra kỹ sản phẩm trước khi thực hiện thanh toán!</div>
                 </div>
-
             </div>
         </div>
+        <!-- ./Cart Header -->
         <form method="POST" id="frm-cart">
             <div class="row cart-wrapper py-5 px-5">
-                <!--Grid column-->
-
+                <!-- Left Content -->
                 <div class="col-lg-8 cart-left-content">
-
-                    <!-- Card -->
-                    <div class="mb-3">
-                        <div class="pt-4 wish-list">
-
+                    <!-- Card Product -->
+                    <div class="card mb-3">
+                        <div class="card-body pt-4">
                             <h5 class="mb-4">Giỏ hàng của bạn (<span>2</span> sản phẩm)</h5>
-
+                            <!-- 1st Product -->
                             <div class="row mb-4" id="blue-shirt">
                                 <div class="col-md-5 col-lg-3 col-xl-3">
                                     <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
@@ -259,7 +248,11 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- ./1st Product -->
+
                             <hr class="mb-4">
+
+                            <!-- 2nd Product -->
                             <div class="row mb-4" id="red-shirt">
                                 <div class="col-md-5 col-lg-3 col-xl-3">
                                     <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
@@ -307,48 +300,46 @@
                                     </div>
                                 </div>
                             </div>
+                            <!-- ./2nd Product -->
                             <p class="text-primary mb-0"><i class="fas fa-info-circle mr-1"></i> Việc thực hiện thêm sản
                                 phẩm vào giỏ hàng của bạn không đồng nghĩa với bạn đặt trước chúng!</p>
-
                         </div>
                     </div>
-                    <!-- Card -->
+                    <!-- ./Card Product -->
 
-                    <!-- Card -->
-                    <div class="mb-3">
-                        <div class="pt-4">
+                    <!-- Note Delivery and Payment Method -->
+                    <div class="card">
+                        <div class="card-body">
+                            <div class="mb-3">
+                                <div class=" pt-4">
 
-                            <h5 class="mb-4">Giao hàng dự kiến</h5>
+                                    <h5 class="mb-4">Giao hàng dự kiến</h5>
 
-                            <p class="mb-0"> Thứ 2, 05/09/2020 12:30 </p>
+                                    <p class="mb-0"> Thứ 2, 05/09/2020 12:30 </p>
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <div class="pt-4">
+
+                                    <h5 class="mb-4">Hình thức thanh toán</h5>
+
+                                    <img class="mr-2" width="45px" src="images/visa.svg" alt="Visa">
+                                    <img class="mr-2" width="45px" src="images/mastercard.svg" alt="Mastercard">
+                                    <img class="mr-2" width="45px" src="images/paypal.png" alt="PayPal acceptance mark">
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <!-- Card -->
-
-                    <!-- Card -->
-                    <div class="mb-3">
-                        <div class="pt-4">
-
-                            <h5 class="mb-4">Hình thức thanh toán</h5>
-
-                            <img class="mr-2" width="45px" src="images/visa.svg" alt="Visa">
-                            <img class="mr-2" width="45px" src="images/mastercard.svg" alt="Mastercard">
-                            <img class="mr-2" width="45px" src="images/paypal.png" alt="PayPal acceptance mark">
-                        </div>
-                    </div>
-                    <!-- Card -->
+                    <!-- ./Note Delivery and Payment Method -->
 
                 </div>
+                <!-- ./Left Content -->
 
-                <!--Grid column-->
-
-                <!--Grid column-->
+                <!-- Cart Right Content -->
                 <div class="col-lg-4 cart-right-content">
-
-                    <!-- Card -->
-                    <div class="mb-3">
-                        <div class="pt-4">
-
+                    <!-- Summary -->
+                    <div class="card mb-3">
+                        <div class="card-body pt-4">
                             <h4 class="mb-3">Tổng quan giỏ hàng</h4>
 
                             <ul class="list-group list-group-flush" id="summary-price">
@@ -380,11 +371,11 @@
 
                         </div>
                     </div>
-                    <!-- Card -->
+                    <!-- ./Summary -->
 
-                    <!-- Card -->
-                    <div class="mb-3">
-                        <div class="pt-4">
+                    <!-- Coupon Code -->
+                    <div class="card mb-3">
+                        <div class="card-body pt-4">
 
                             <a class="dark-grey-text d-flex justify-content-between" data-toggle="collapse"
                                 href="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
@@ -402,18 +393,19 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Card -->
+                    <!-- ./Coupon Code -->
 
                 </div>
-                <!--Grid column-->
+                <!-- ./Cart Right Content -->
             </div>
         </form>
     </div>
+    <!-- ./Cart -->
 
     <!-- Footer -->
     <footer class="page-footer font-small elegant-color">
         <div class="footer-copyright text-center py-3">
-           Tống Công Danh - MSSV: 1988216
+            Tống Công Danh - MSSV: 1988216
         </div>
     </footer>
     <!-- Footer -->
