add index to index.html

--- a/LAB06/1988216_index.html
+++ b/LAB06/1988216_index.html
@@ -40,6 +40,13 @@
                             1988216_Cart.html
                         </li>
                     </a>
+                    
+                    <a href="1988216_DeliveryAddress.html" target="_tab">
+                        <li class="list-group-item">
+                            1988216_DeliveryAddress.html
+                        </li>
+                    </a>
+
                 </ul>
             </div>
         </div>
